Structures tool: fix condition for string maxBytes meaning empty string

FIXED-IN: 0.26.9
BUG: 396057