kasten/controllers/view/structures/datatypes/strings/utf32stringdata.cpp
@@ -111,7 +111,7 @@ qint64 Utf32StringData::read(Okteta::AbstractByteArrayModel* input, Okteta::Addr
     uint count = 0;
     mEofReached = false;
     if (((mMode & CharCount) && mLength.maxChars == 0)
-        || ((mMode & ByteCount) && mLength.maxBytes < 2)) {
+        || ((mMode & ByteCount) && mLength.maxBytes < 4)) {
         mCodePoints.clear();
         return 0;
     }
