kasten/controllers/view/structures/datatypes/strings/utf8stringdata.cpp
@@ -115,7 +115,7 @@ qint64 Utf8StringData::read(Okteta::AbstractByteArrayModel* input, Okteta::Addre
     uint count = 0;
     mEofReached = false;
     if (((mMode & CharCount) && mLength.maxChars == 0)
-        || ((mMode & ByteCount) && mLength.maxBytes < 2)) {
+        || ((mMode & ByteCount) && mLength.maxBytes == 0)) {
         mCodePoints.clear();
         return 0;
     }
